# photo_editor

photo_editor/: CMakeLists.txt  main.cpp  photo_editor_en_150.ts  photo_editor_window.cpp  photo_editor_window.h  photo_editor_window.ui  resource.qrc  save_dialog.cpp  save_dialog.h  save_dialog.ui  start_dialog.cpp  start_dialog.h  start_dialog.ui
photo_editor/color_validator/: qcolor_validator.cpp  qcolor_validator.h
photo_editor/custom_list_widget/: qcustom_list_widget.h
photo_editor/custom_objects/: qbase_layer.cpp  qbase_layer.h  qphoto_item.cpp  qphoto_item.h
